--- a/metadata/pep_config_parallel.yaml
+++ b/metadata/pep_config_parallel.yaml
@@ -1,5 +1,5 @@
 pep_version: 2.1.0
-sample_table: sample_list_parallel.csv
+sample_table: synthetic_list_parallel.csv
 sample_modifiers:
   append:
     chrom_sizes: ${CHROMSIZESPATH} #"/home/drc/GITHUB/gtars/gtars/tests/hg38.chrom.sizes"
